assets/css/style.css
/*----Colors */


header {
    background-color: #f5f4f4;
}

.nav-background {
    background-color: #f5f4f4;
}

footer {
    background-color: #68b0ab;
}

a:hover {
    color: #68b0ab;
}

.buy-poetry i {
    color: #800000;
}

.newsletter-icon {
    color: #800000;
}

.bookshop-links li {
    color: #f5f4f4;
}

.bookshop-links a:hover {
    color: #800000;
}
.social-icon i {
    color: #f5f4f4;
}

/*----General Styles */
body {
    margin: 0;
    padding: 0;
}

h1 {
    visibility: hidden;
    font-size: 3px;
}

h5 {
    font-family: Arial, sans-serif;
    color: #f5f4f4;;
}

/*----Header */

.row {
    margin: 0px;
}

.sticky-header {
    position: sticky;
}

.nav-position ul {
padding: 75px 100px;
    margin: 0px; 
}

.logo-max {
    max-width: 220px;
    margin: 0px;
}


.nav-button {
    font-family: Arial, sans-serif;
    font-size: 20px;
    text-align: center;
    padding: 2px 30px;
    background-color: #68b0ab;
    border-radius: 25px;
}

li .nav-button {
    margin-left: 10%;
}

li {
  float: left;
  list-style-type: none;
  font-family: Arial, sans-serif;
  font-size: 20px;
}

a {
  
  padding: 10px;
  color: black;
}

.nav-icon{
    color: #800000;
}

.icon {
    font-size: 30px;
    color: #68b0ab;
}

.topnav .icon {
  display: none;
}

/*----Footer*/


footer {
    height: 170px;
    margin: 0px;
    position: relative;
    padding-bottom: 0px;
}

#footer-details {
    padding: 20px;
}

.social-background {
    background-color: #68b0ab;
    margin-top: 30px;
    margin-bottom: 0px;
    padding-bottom: 0px;
}

.buy-poetry {
    padding-left: 25%;
    padding-bottom: 0%;
}

.subscribe-newsletter {
    padding-left: 15%;
}

.newsletter-button {
    background-color: #800000;
    color: #f5f4f4;
    font-family: Arial, sans-serif;
    font-size: 18px;
    margin-top: 5%;
    margin-left: 5%;
}

.form-border {
    border-top: none;
    border-right: none;
    border-left: none;
    background-color: #68b0ab;
    font-family: Arial, sans-serif;
    font-size: 18px;
}


/*----Homepage */
.home-banner {
    background-image: url(/assets/images/galway-banner.jpg);
    background-position: bottom center;
    background-repeat: no-repeat;
    background-size: cover;
    position: relative;
    height: 500px;
    margin: 0;
}



/*----Media Queries */

@media screen and (max-width: 1150px) {
  .topnav li {display: none;}
  .topnav a.icon {
    float: right;
    display: block;
  }
}

@media screen and (max-width: 1150px) {
  .topnav.responsive {position: absolute;}
  .topnav.responsive a.icon {
    position: relative;
    right: 0;
    top: 0;
  }
  .topnav.responsive a {
    float: none;
    display: block;
    text-align: left;
  }

  
}

